--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -16,7 +16,9 @@
 
 {% include "inc/suscriptions.html" %}
 
-<!-- Online Test Box -->
+{% include "inc/online_test.html" %}
+
+<!-- Online Test Box 
 <section id="online-test" class="content-section">
 
     <div class="container my-5">
@@ -25,18 +27,6 @@
                 <h2>¡Analiza cualquier sitio!
                 </h2>
                 <p class="lead">Revisa +100 puntos clave en un mismo sitio y en segundos.</p>
-                <!--
-            <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
-            
-        <form class="row justify-content-center">
-            <div class="col-md-6">
-                <input type="url" class="form-control" placeholder="Enter your website URL (e.g., https://yourbusiness.com)" required>
-            </div>
-            <div class="col-md-3">
-                <button type="submit" class="btn btn-primary w-100">Analyze URL</button>
-            </div>
-        </form>
-        -->
                 <form action="/start" method="post" id="pageInfoForm">
                     {{ form.csrf_token }}
                     <div class="mb-3">
@@ -45,12 +35,7 @@
                         {% for error in form.url.errors %}
                         <small class="form-text text-danger">{{ error }}</small>
                         {% endfor %}
-                    </div><!-- 
-                <button type="submit" class="btn btn-primary" id="analizarBtn">
-                    <span id="btnText">ANALIZAR URL</span>
-                    <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status"
-                        aria-hidden="true"></span>
-                </button>-->
+                    </div>
                     <button type="submit" class="btn btn-primary" id="analizarBtn">
                         <span id="btnText">MoOnitorizar!</span>
                         <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status"
@@ -66,7 +51,7 @@
         </div>
     </div>
 </section>
-
+-->
 
 <div class="container mt-5">
     {% if data %}
