--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -3,10 +3,9 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <!-- Text Content -->
-            <div class="col-lg-6 jumbotron-content mb-4 mb-lg-0 text-center text-lg-start">
+            <div class="col-lg-6 jumbotron-content mb-4 mb-lg-0 text-center text-lg-start order-2 order-lg-1">
                 <h1 class="display-3 fw-bold text-light">Analiza webs en profundidad <strong>facilmente</strong></h1>
-                <p class="lead text-light">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b>
-                </p>
+                <p class="lead text-light">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b></p>
 
                 <div class="d-flex justify-content-center justify-content-lg-start mb-3">
                     <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Entra ya!</a>
@@ -31,9 +30,8 @@
             </div>
 
             <!-- Image -->
-            <div class="col-lg-6">
-                <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-slider-pic1.png"
-                    alt="Monitoreo de sitio web" class="img-fluid rounded-4 shadow-lg">
+            <div class="col-lg-6 order-1 order-lg-2">
+                <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-slider-pic1.png" alt="Monitoreo de sitio web" class="img-fluid rounded-4 shadow-lg">
             </div>
         </div>
     </div>
